# modex

./: LICENSE  Makefile  README.md  meson.build
src/: app.cpp  demo.c  error.c  error.h  foo.cpp  math.cpp  memory.c  memory.h  module.cpp  module.hpp  storage.c  storage.h
